Se agrego prints para mostrar entradas de usuario

--- a/Tarea1.ipynb
+++ b/Tarea1.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El paquete pesara 2845 g\n"
+      "El paquete tiene 8 payasitos y 12 munecas\n",
+      "El paquete pesara 1796 g\n"
      ]
     }
    ],
@@ -21,18 +22,20 @@
     "cantidad_m = int(input('Cuantas munecas pidieron: '))\n",
     "\n",
     "peso_paquete = (cantidad_p*payaso) + (cantidad_m*muneca)\n",
+    "print ('El paquete tiene {} payasitos y {} munecas'.format(cantidad_p,cantidad_m))\n",
     "print ('El paquete pesara {} g'.format(peso_paquete))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Su antiguo correo: leonardo.villanueva@gmail.com\n",
       "Su nuevo correo sera: leonardo.villanueva@alumnos.uaq.mx\n"
      ]
     }
@@ -46,24 +49,27 @@
     "    correo =input('Ingrese un correo valido: ')\n",
     "\n",
     "c = correo.split('@')\n",
+    "print('Su antiguo correo: {}'.format(correo))\n",
     "print ('Su nuevo correo sera: {}'.format(c[0]+dominio))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le corresponde un impositivo de 15%\n"
+      "Para una renta de 38560.0\n",
+      "Le corresponde un impositivo de 30%\n"
      ]
     }
    ],
    "source": [
     "renta_actual = float(input('Cuanto paga actualmente de renta'))\n",
+    "print('Para una renta de {}'.format(renta_actual))\n",
     "if renta_actual < 10000:\n",
     "    print ('Le corresponde un impositivo de 5%')\n",
     "elif renta_actual >= 10000 and renta_actual < 20000:\n",
@@ -78,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Contrasena Incorrecta xxxxxx\n",
-      "Contrasena Incorrecta xxxxxx\n",
-      "Contrasena Incorrecta xxxxxx\n",
+      "asdfasdfadsf es una contrasena Incorrecta xxxxxx\n",
+      "123asdfaeq3f es una contrasena Incorrecta xxxxxx\n",
+      "12444455 es una contrasena Incorrecta xxxxxx\n",
       "Contrsena correcta !!!!\n"
      ]
     }
@@ -101,7 +107,7 @@
     "        print('Contrsena correcta !!!!')\n",
     "        break\n",
     "    else:\n",
-    "        print('Contrasena Incorrecta xxxxxx')"
+    "        print('{} es una contrasena Incorrecta xxxxxx'.format(_contrasena))"
    ]
   },
   {
@@ -135,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -159,9 +165,11 @@
      "output_type": "stream",
      "text": [
       "Lista de Compras\n",
-      "| auga | 10.5 |\n",
-      "| balon | 89.99 |\n",
-      "| Total | 100.49 |\n"
+      "| Agua | 10.5 |\n",
+      "| Sprite | 16.5 |\n",
+      "| Frijoles Isadora | 25.0 |\n",
+      "| Leche | 20.0 |\n",
+      "| Total | 72.0 |\n"
      ]
     }
    ],
@@ -171,7 +179,7 @@
     "total = 0.0\n",
     "for articulo in carrito:\n",
     "    print ('| {} | {} |'.format(articulo,carrito[articulo]))\n",
-    "    total += carrito[]\n",
+    "    total += carrito[articulo]\n",
     "print ('| Total | {} |'.format(total))\n"
    ]
   },
@@ -227,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
