Clase Lista y Nodo no se concluyeron

--- a/ejercicios2.ipynb
+++ b/ejercicios2.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Nodo():\n",
+    "class Nodo:\n",
     "    def __init__(self,valor):        \n",
     "        self.valor = valor\n",
     "        self.siguiente = None\n"
@@ -21,14 +21,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Lista ():\n",
+    "class Lista :\n",
     "    def __init__(self,cabeza):\n",
     "        self.cabeza = Nodo(cabeza)\n",
+    "    \n",
+    "    def insertarPrimero(self,valor):\n",
+    "        n = Nodo(valor)\n",
+    "        if self.cabeza == None:\n",
+    "            self.cabeza = n\n",
+    "        else:\n",
+    "            c1 = self.cabeza\n",
+    "            self.cabeza = n\n",
+    "            n.siguiente = c1\n",
+    "    def insertarAntes(self,valora,valorb):\n",
+    "        print (2)                \n",
+    "\n",
+    "    \n",
+    "    def recorrer(self):\n",
+    "        n = self.cabeza\n",
+    "        while n != None:\n",
+    "            print (n.valor)\n",
+    "            n = n.siguiente\n",
+    "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 10\n",
+    "lis = Lista(10)\n",
+    "lis.insertarPrimero(9)\n",
+    "lis.insertarPrimero(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis.recorrer()"
    ]
   }
  ],
