Se añadio la clase pila

--- a/ejercicios2.ipynb
+++ b/ejercicios2.ipynb
@@ -2,10 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "class Pila:\n",
+    "    def __init__(self):\n",
+    "        self.items = deque()\n",
+    "\n",
+    "    def esta_vacia(self):\n",
+    "        return len(self.items) == 0\n",
+    "\n",
+    "    def apilar(self, item):\n",
+    "        self.items.append(item)\n",
+    "\n",
+    "    def desapilar(self):\n",
+    "        if not self.esta_vacia():\n",
+    "            return self.items.pop()\n",
+    "\n",
+    "    def cima(self):\n",
+    "        if not self.esta_vacia():\n",
+    "            return self.items[-1]\n",
+    "\n",
+    "    def tamano(self):\n",
+    "        return len(self.items)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Pila()\n",
+    "p.apilar(14)\n",
+    "p.apilar(8)\n",
+    "p.apilar(10)\n",
+    "p.apilar(5)\n",
+    "p.apilar(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def noname(p):\n",
+    "    a = Pila()\n",
+    "    x = p.desapilar()\n",
+    "    a.apilar(p.desapilar())\n",
+    "    y = p.desapilar()\n",
+    "    p.apilar(x)\n",
+    "    p.apilar(y)\n",
+    "    p.apilar(a.desapilar())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noname(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while not (p.esta_vacia):\n",
+    "    print (p.desapilar())"
+   ]
   },
   {
    "cell_type": "code",
